--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.5.0",
     "framer-motion": "^12.23.22",
     "lucide": "^0.544.0",
     "lucide-react": "^0.544.0",
+    "primereact": "^10.9.7",
     "react": "^19.1.1",
+    "react-circular-progressbar": "^2.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
     "react-router-dom": "^6.30.1",
-    "react-scroll": "^1.9.3"
+    "react-scroll": "^1.9.3",
+    "react-slick": "^0.31.0",
+    "recharts": "^3.2.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
