--- a/package.json
+++ b/package.json
@@ -10,19 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "chart.js": "^4.5.0",
+    "chart.js": "^4.5.1",
+    "dayjs": "^1.11.18",
+    "firebase": "^12.4.0",
     "framer-motion": "^12.23.22",
     "lucide": "^0.544.0",
     "lucide-react": "^0.544.0",
     "primereact": "^10.9.7",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-circular-progressbar": "^2.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.30.1",
     "react-scroll": "^1.9.3",
     "react-slick": "^0.31.0",
-    "recharts": "^3.2.1",
+    "recharts": "^3.3.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
