--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.11.18",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.22",
+    "html2canvas": "^1.4.1",
     "lucide": "^0.544.0",
     "lucide-react": "^0.544.0",
     "primereact": "^10.9.7",
